# PaddleMIX

./: .copyright.hook  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CITATION.cff  README.md  README_EN.md  build_env.sh  build_paddle_env.sh  change.py  export_qwen_vl_vision.sh  guide.md  pyproject.toml  requirements.txt  run_qwen_vl.sh  run_qwen_vl_fine.sh  setup.py
.travis/: precommit.sh
applications/: README.md  README_en.md  __init__.py  gradio_autolable.py  gradio_text2image.py
comfyui/: README.md
deploy/: README.md  README_en.md
docs/: CHANGELOG.md  train_tutorial.md
paddlemix/: __init__.py  activations.py  checkpoint.py  optimization.py
paddlemix/examples/YOLO-World/: README.md  infer.py  pyproject.toml
paddlemix/examples/YOLO-World/configs/: yolo_world_l.yml  yolo_world_m.yml  yolo_world_s.yml  yolo_world_x.yml  yolo_world_xl.yml
paddlemix/examples/YOLO-World/pretrain/: torch2paddle.py
paddlemix/examples/YOLO-World/yolo_world/: __init__.py
paddlemix/examples/YOLO-World/yolo_world/models/: __init__.py
paddlemix/examples/YOLO-World/yolo_world/models/backbones/: __init__.py  yolo_world_backbone.py
paddlemix/examples/YOLO-World/yolo_world/models/detectors/: __init__.py  yolo_world.py
paddlemix/examples/YOLO-World/yolo_world/models/heads/: __init__.py
paddlemix/examples/YOLO-World/yolo_world/models/necks/: __init__.py  yolo_world_pafpn.py
paddlemix/examples/YOLO-World/yolo_world/models/utils/: __init__.py  util.py
paddlevlp/: .training.conf  .training_24l.conf  __init__.py  activations.py  killjobs.sh  optimization.py
ppdiffusers/: README.md  setup.py  (+1 more)
(+2927 files in other folders)
